@@ -1,3 +1,4 @@
+24-Mar-2009     cpo     Tag V00-07-03. Remove xtcreader from pdsapp.
 24-Mar-2009     cpo     Tag V00-07-02. Removed xtcreader dependencies.
                         Cleaned up voltage calculations in AcqDisplay.
 24-Mar-2009     cpo     Tag V00-07-01. Add monitoring support for acqiris
